horizontal scroll fixed on desktop

--- a/strabo/static/public_styles/about.css
+++ b/strabo/static/public_styles/about.css
@@ -3,6 +3,10 @@
 /* The code here is a little janky and could use editing 
   But well it works */
 
+body {
+  overflow-x: hidden;
+}
+
 .banner {
   position: absolute;
   left: 0;
